feat: rename gitignore_global to ignore
I didn't realize git automatically looks for ~/.config/ignore so I had
manually created ~/.config/gitignore_global. This commit follows the git
default location.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -48,8 +48,8 @@
     # git
     ~/.config/git/config:
       path: config/git/gitconfig
-    ~/.config/git/gitignore_global:
-      path: config/git/gitignore_global
+    ~/.config/git/ignore:
+      path: config/git/gitignore
     # zsh / prezto
     ~/.zshenv:
       path: config/zsh/zshenv
