feat(vscode): enable toggling sidebar while in terminal

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -20,6 +20,10 @@
   },
   "terminal.integrated.defaultProfile.linux": "bash",
   "terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
+  "terminal.integrated.commandsToSkipShell": [
+    "workbench.action.toggleSidebarVisibility",
+    "workbench.action.toggleAuxiliaryBar"
+  ],
   "git.confirmSync": false,
   "explorer.confirmDelete": false,
   "rust-analyzer.check.command": "clippy",
