feat(vscode): explicitly set window zoom level

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -27,5 +27,6 @@
   "git.confirmSync": false,
   "explorer.confirmDelete": false,
   "rust-analyzer.check.command": "clippy",
-  "editor.fontFamily": "GeistMono Nerd Font Mono, Consolas, 'Courier New', monospace"
+  "editor.fontFamily": "GeistMono Nerd Font Mono, Consolas, 'Courier New', monospace",
+  "window.zoomLevel": 1
 }
