fix(vscode): change colourscheme

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -7,8 +7,8 @@
   "editor.renderWhitespace": "trailing",
   "window.autoDetectColorScheme": true,
   "workbench.colorTheme": "GitHub Light",
-  "workbench.preferredDarkColorTheme": "Rainbow (rainglow)",
-  "workbench.preferredLightColorTheme": "Nord Light",
+  "workbench.preferredDarkColorTheme": "Tokyo Night Storm",
+  "workbench.preferredLightColorTheme": "Tokyo Night Light",
   "workbench.tips.enabled": false,
   "telemetry.telemetryLevel": "off",
   "editor.formatOnSave": true,
