fix: change vscode settings

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -32,5 +32,6 @@
   "update.showReleaseNotes": false,
   "workbench.activityBar.location": "top",
   "workbench.sideBar.location": "right",
-  "chat.commandCenter.enabled": false
+  "chat.commandCenter.enabled": false,
+  "workbench.editor.empty.hint": "hidden"
 }
