feat: Add install script for Pop_OS
This adds a bash install script for pop_os, I'd like to expand this to
work on WSL and macOS at the least.

I'd like to eventually phase out dotbot because I'm not a huge fan of
having a python dependency. It'd be nice to have a single binary that
performs the same functionality of dotbot.

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -4,13 +4,11 @@ erlang = "latest"
 elixir = "latest"
 node = "latest"
 rust = "latest"
-python = "latest"
-java = "temurin-17"
-kubectl = "latest"
-lua = "5.1" # lazy.nvim luarocks requires 5.1
-stylua = "latest" # lua code formatting
 zig = "latest"
 zls = "latest"
+"aqua:starship/starship" = "latest"
+"aqua:ajeetdsouza/zoxide" = "latest"
+"aqua:jesseduffield/lazygit" = "latest"
 "npm:@google/gemini-cli" = "latest"
 
 [settings]
