feat: Add flyctl, and opencode-ai to mise

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -6,11 +6,13 @@ node = "latest"
 rust = "latest"
 zig = "latest"
 zls = "latest"
-"aqua:starship/starship" = "latest"
 "aqua:ajeetdsouza/zoxide" = "latest"
 "aqua:jesseduffield/lazygit" = "latest"
-#"ubi:openai/codex" = "codex-rs-ac6e1b2661320a631d80aa51bdfa8f1635e0c8fa-1-rust-v0.0.2506052246"
+"aqua:starship/starship" = "latest"
+"aqua:superfly/flyctl" = "latest"
 "npm:@google/gemini-cli" = "latest"
+"npm:opencode-ai" = "latest"
+"ubi:openai/codex" = "latest"
 
 [settings]
 experimental = true
