feat: Open vscode terminal in editor area
I like the terminal to open as another tab alongside the code files.
Default value is to open the terminal in a side pane.

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -36,5 +36,6 @@
   "workbench.editor.empty.hint": "hidden",
   "window.restoreWindows": "none",
   "mise.configureExtensionsAutomatically": false,
-  "editor.lineNumbers": "relative"
+  "editor.lineNumbers": "relative",
+  "terminal.integrated.defaultLocation": "editor"
 }
