fix: Install opencode using ubi
Previously opencode was installed as an npm package. This changes the
installation method to use ubi for a more native mise solution.

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -11,7 +11,7 @@ zls = "latest"
 "aqua:starship/starship" = "latest"
 "aqua:superfly/flyctl" = "latest"
 "npm:@google/gemini-cli" = "latest"
-"npm:opencode-ai" = "latest"
+"ubi:sst/opencode" = "latest"
 "ubi:openai/codex" = "latest"
 
 [settings]
