--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -18,7 +18,8 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
   "terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
   "terminal.integrated.commandsToSkipShell": [
     "workbench.action.toggleSidebarVisibility",
