feat: Install lazydocker with mise

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -7,6 +7,7 @@ rust = "latest"
 zig = "latest"
 zls = "latest"
 "aqua:ajeetdsouza/zoxide" = "latest"
+"aqua:jesseduffield/lazydocker" = "latest"
 "aqua:jesseduffield/lazygit" = "latest"
 "aqua:starship/starship" = "latest"
 "aqua:superfly/flyctl" = "latest"
