--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -11,3 +11,23 @@
 # on Ghostty's website, at https://ghostty.org/docs/config.
 
 theme = dark:catppuccin-frappe,light:catppuccin-latte
+
+keybind = ctrl+h=goto_split:left
+keybind = ctrl+j=goto_split:down
+keybind = ctrl+k=goto_split:up
+keybind = ctrl+l=goto_split:right
+
+keybind = ctrl+\=new_split:right
+keybind = ctrl+-=new_split:down
+
+keybind = super+t=new_tab
+keybind = super+1=goto_tab:1
+keybind = super+2=goto_tab:2
+keybind = super+3=goto_tab:3
+keybind = super+4=goto_tab:4
+keybind = super+5=goto_tab:5
+keybind = super+6=goto_tab:6
+keybind = super+7=goto_tab:7
+keybind = super+8=goto_tab:8
+keybind = super+9=goto_tab:9
+keybind = super+0=last_tab
