--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -11,6 +11,7 @@
 # on Ghostty's website, at https://ghostty.org/docs/config.
 
 theme = dark:catppuccin-frappe,light:catppuccin-latte
+font-family = "GeistMono Nerd Font Mono"
 
 keybind = ctrl+h=goto_split:left
 keybind = ctrl+j=goto_split:down
