fix: Ignore vscode extension recommendations

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -38,5 +38,6 @@
   "window.restoreWindows": "none",
   "mise.configureExtensionsAutomatically": false,
   "editor.lineNumbers": "relative",
-  "terminal.integrated.defaultLocation": "editor"
+  "terminal.integrated.defaultLocation": "editor",
+  "extensions.ignoreRecommendations": true
 }
