feat: Change default vscode theme

--- a/config/vs-code/settings.json
+++ b/config/vs-code/settings.json
@@ -6,9 +6,9 @@
   "git.autofetch": true,
   "editor.renderWhitespace": "trailing",
   "window.autoDetectColorScheme": true,
-  "workbench.colorTheme": "GitHub Light",
-  "workbench.preferredDarkColorTheme": "Tokyo Night Storm",
-  "workbench.preferredLightColorTheme": "Tokyo Night Light",
+  "workbench.colorTheme": "Alabaster",
+  "workbench.preferredDarkColorTheme": "Rubber",
+  "workbench.preferredLightColorTheme": "Alabaster",
   "workbench.tips.enabled": false,
   "telemetry.telemetryLevel": "off",
   "editor.formatOnSave": true,
