feat: Change Gemini's default context file name

--- a/config/gemini/settings.json
+++ b/config/gemini/settings.json
@@ -1,6 +1,7 @@
 {
   "theme": "GitHub Light",
   "selectedAuthType": "oauth-personal",
+  "contextFileName": "AGENTS.md",
   "mcpServers": {
     "context7": {
       "httpUrl": "https://mcp.context7.com/mcp"
