feat: Add neovim nightly through mise

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -14,6 +14,7 @@ fnox = "latest"
 "aqua:jesseduffield/lazygit" = "latest"
 "aqua:starship/starship" = "latest"
 "aqua:superfly/flyctl" = "latest"
+"asdf:neovim" = "nightly"
 "npm:@google/gemini-cli" = "latest"
 "ubi:charmbracelet/crush" = "latest"
 "ubi:sst/opencode" = "latest"
